tests/fixtures/positive/comments/UndocumentedPublicFunction.kt
package comments

class Example {
    fun bar() {
        println("hello")
    }
}
