tests/fixtures/negative/comments/DeprecatedBlockTag.kt
package comments

class Example {
    @Deprecated("use newFoo instead")
    fun foo() {
        println("hello")
    }
}
